--- a/events.html
+++ b/events.html
@@ -45,6 +45,7 @@
               </ul>
               <li class="active drop-down"><a href="events.html"><i class="fa fa-calendar "aria-hidden="true"></i>&ensp;Events</a>
               <ul>
+                <li><a href="events.html#webdev">Web development session</a></li>
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
@@ -62,6 +63,31 @@
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
     <main>
+      <section id="webdev" class="container" style="color: #000;">
+        <h2>WEB DEVELOPMENT SESSION</h2>
+        <h5>Get Set Go with Web Development by Ankit Kumar Singh</h5>
+        <p>In the recent past, we have seen prominent career growth in web development. Ultimately it will be proceeded and propelled by the continued fame of smart devices and eCommerce. The web development of today is more than creating web pages, functional interfaces. With the advancement in internet accessibility, Web development also invokes artistic designs and user interactive websites for prototype lay-outing. Web development is notably an artistic functionality in the present tech world. Keeping in view of future technology readiness in new aspiring engineers, we Team INDUCE indulging LIVE TRAINING Sessions on Web Development.</p>
+        <div style="display: flex;justify-content: center">
+         <a href="http://url.cafe/247899"><button class="btn btn-primary">Register</button></a>
+        </div>
+        <h5>INDUCE Live Training Standards</h5>
+        <p>Induce believes that Nurturing the better standards in students can be achieved by the capable and calibre trainers in the organizations, Our collaborators for these live sessions are Anikthkumar Singh Manager and Founder of MAHAWIKI a likeminded community like INDUCE for knowledge sharing.</p>
+        <br/>
+        <p>2 Days Program designed with hands on learning experience with lot more perks from INDUCE </p>
+        <ul>
+          <li>Participation certificate</li>
+          <li>Project oriented teaching</li>
+          <li>Technology at low cost</li>
+          <li>Pathway to best technical orientation</li>
+        </ul>
+        <br/>
+        <h5>Outline</h5>
+        <p>Live Session Start date: 25 June 2021 – 26 June 2021</p>
+        <p>Platform: YouTube </p>
+        <p>Timings: 11:00 AM – 12:30 PM </p>
+        <p>Free of Cost</p>
+      </section><hr>
+      
       <section id="inn" class="container" style="color: #000;">
         <h2>INNOVATE INDIA</h2>
         <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
