--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
               </ul>
               <li class="drop-down "><a  href="events.html"><i class="fa fa-calendar "aria-hidden="true"></i>&ensp;Events</a>
               <ul>
+                <li><a href="events.html#webdev">Web development session</a></li>
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
                 <li><a href="events.html#women">Shree parichai</a></li>
+
               </ul></li>
               <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a></li>
             </ul>
@@ -98,6 +100,9 @@
      </ol>
      <div class="carousel-inner">
       <div class="carousel-item active">
+        <a href="./events.html/#webdev"><img src="assets/img/webdev.jpeg" class="d-block w-100" alt="..."></a>
+       </div>
+      <div class="carousel-item">
         <a href="./internships.html"><img src="assets/img/car1.jpeg" class="d-block w-100" alt="..."></a>
        </div>
        <div class="carousel-item ">
