--- a/internships.html
+++ b/internships.html
@@ -29,7 +29,7 @@
         <div class="col-xl-11 d-flex align-items-center">
           <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
           <nav class="nav-menu d-none d-lg-block">
-            <!-- <ul>
+               <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="active "><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
@@ -52,7 +52,7 @@
               </ul>
               <li><a href="login.html" ><i class="fa fa-sign-in fa-lg"></i>&ensp;login</a>
             </ul>
-          </nav> -->
+          </nav> 
         </div>
       </div>
     </div>
@@ -64,8 +64,55 @@
     <main>
       <section id="inn" class="container" style="color: #000;">
         <h2><b style="font-weight: 700">Internships</b></h2>
+        <h3 style="font-weight: 500"><i>AVISHKAR TRAINING PROGRAMME</i></h3>
+        <h4 style="font-weight: 500">COURSE PATTERN</h4>
+        <h4 style="font-weight: 500">1.AUTOCAD</h4>
+        <ul>
+          <li>First 15 days AutoCAD Basics, drawings making,
+            then division of group based on interest.</li>
+          <li>After division training in particular topics.</li>
+          <li>Then project -01 just basics will be given and
+            student need to prepare everything and
+            correcting mistakes.</li>
+          <li>Project -02 details will be given and made them
+            easy.</li>
+          <li>If only AutoCAD software training then it will be
+            only 2500.</li>
+          <li>The complete Auto CAD course will be for one
+            month from very basic concept to advance level.</li>
+        </ul>
+        <h4 style="font-weight: 500">2.SKETCHUP</h4>
+        <ul>
+          <li>Software tools</li>
+          <li>Basics in designing</li>
+          <li>Import and export of files</li>
+          <li>Scene Settings</li>
+          <li>Vray additional software training</li>
+        </ul>
+        <h4 style="font-weight: 500">3.REVIT</h4>
+        <ul><li>This is used in construction industries Designing of
+          external buildings This used in interior firms also
+        </li></ul>
+        <h4 style="font-weight: 500">FEES STRUCTURE</h4>
+        <div><h5 style="font-weight: 500">PACKAGE 1:</h5>
+        <ul><li>AutoCAD +SketchUp + Photoshop(Basics)+internship<br> @Rs.9000/-</li></ul></div>
+        <div><a href="https://checkout.razorpay.com/v1/payment-button.js"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <div><h5 style="font-weight: 500">PACKAGE 2:</h5>
+        <ul><li>AutoCAD+3ds Max/Revit + Photoshop(Basics)+internship<br> @Rs.10000/-</li></ul></div>
+        <div><a href="https://checkout.razorpay.com/v1/payment-button.js"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <div><ul><li>The above packages without internship for<br> @Rs.6999 /-</li></ul></div>
+        <div><a href="https://checkout.razorpay.com/v1/payment-button.js"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <h4 style="font-weight: 500">COURSE DURATION</h4>
+        <ul><li>2+ Months<br>
+          <b>TIMINGS - 6.00 pm to 8.00pm</b></li></ul>
+        <p><b>Note:</b>Internships will be provided for 3 months minimum, that
+          to based on test results companies will be given , Interview
+          will be arranged , candidates need to crack by themselves
+          after complete training. </p>
+          <div>
+            <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px" src="assets/img/intern1.png"><br>
+          </div>
        <h3 style="font-weight: 500"><i>Incorporation of IoT with INDUCE</i></h3>
-
        <p>
         The internet of today is notably different than the internet of past decades. The internet of today is more than email, website pages, and document transfers between PCs. The advancing internet is turning into an Internet of Things (IoT). At this point of time no longer will the only devices accessing the internet be tablets, computers, and smartphones. The sensor-equipped, internet-ready, smart devices, automation devices of tomorrow will incorporate everything from automobiles and biomedical gadgets to domestic devices and natural ecosystems.
        </p>
