--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <a href="./internships.html"><img src="assets/img/car9.png" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item ">
           <a href="./events.html"><img src="assets/img/webdev.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item">
