--- a/internships.html
+++ b/internships.html
@@ -96,12 +96,12 @@
         <h4 style="font-weight: 500">FEES STRUCTURE</h4>
         <div><h5 style="font-weight: 500">PACKAGE 1:</h5>
         <ul><li>AutoCAD +SketchUp + Photoshop(Basics)+internship<br> @Rs.9000/-</li></ul></div>
-        <div><a href="https://checkout.razorpay.com/v1/payment-button.js"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <div><a href="./paymentgateway.html"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
         <div><h5 style="font-weight: 500">PACKAGE 2:</h5>
         <ul><li>AutoCAD+3ds Max/Revit + Photoshop(Basics)+internship<br> @Rs.10000/-</li></ul></div>
-        <div><a href="https://checkout.razorpay.com/v1/payment-button.js"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <div><a href="./paymentgateway1.html"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
         <div><ul><li>The above packages without internship for<br> @Rs.6999 /-</li></ul></div>
-        <div><a href="https://checkout.razorpay.com/v1/payment-button.js"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <div><a href="./paymentgateway2.html"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
         <h4 style="font-weight: 500">COURSE DURATION</h4>
         <ul><li>2+ Months<br>
           <b>TIMINGS - 6.00 pm to 8.00pm</b></li></ul>
