--- a/paymentgateway2.html
+++ b/paymentgateway2.html
@@ -119,7 +119,7 @@ h1 {
 <div class="bg bg3"></div>
 <div class="content">
   <h3 class="headingtxt">Click here to pay</h3>
-  <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Hw83fppzjjoHDR" async> </script> </form>
+  <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Hw7Gc0wVIJdj6h" async> </script> </form>
 </div>
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
