--- a/internships.html
+++ b/internships.html
@@ -63,8 +63,20 @@
   </section>
     <main>
       <section id="inn" class="container" style="color: #000;">
-        <h2><b style="font-weight: 700">Internships</b></h2>
-        <h3 style="font-weight: 500"><i>AVISHKAR TRAINING PROGRAMME</i></h3>
+        <h2><b style="font-weight: 700"><u>Internships</u></b></h2>
+        <h3 style="font-weight: 500"><i><b>AVISHKAR TRAINING PROGRAMME</i></b></h3>
+        <h4 style="font-weight: 500">Enhance your Designing Skills with Induce</h4>
+        <p>In this present innovative world, we know the importance of designing process. Designing is the key process using which we shape our ideas. CAD(Computer Aided Design) is one of the best software used for the process of designing. Designing is the art through which we represent our ideas. Using Sketchup software tools one can bring perfection in their designs. For designing external buildings one can master Revit concepts. 
+          SketchUp is a dominant and sophisticated tool that makes building informative and constructability modeling attainable to everyone. Revit as a unified modelling tool for architecture, engineering, and construction. 
+          <br>
+          Understanding the importance of designing and learning new technologies, Induce has come up with a training program in collaboration with Avishkar training.
+          
+          </p>
+        <h4 style="font-weight: 500">INDUCE Training Standards</h4>
+        <p>INDUCE always believes in providing the best support and to create great platform for students to enhance their skills and to make themselves industry ready. With this ideology we are collaborating with Avishkar training to provide the best opportunity to learn CAD designing.</p>
+        <div>
+          <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px" src="assets/img/intern1.png"><br>
+        </div><br>
         <h4 style="font-weight: 500">COURSE PATTERN</h4>
         <h4 style="font-weight: 500">1.AUTOCAD</h4>
         <ul>
@@ -100,7 +112,11 @@
         <div><h5 style="font-weight: 500">PACKAGE 2:</h5>
         <ul><li>AutoCAD+3ds Max/Revit + Photoshop(Basics)+internship<br> @Rs.10000/-</li></ul></div>
         <div><a href="./paymentgateway1.html"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
-        <div><ul><li>The above packages without internship for<br> @Rs.6999 /-</li></ul></div>
+        <div><h5 style="font-weight: 500">PACKAGE 3:</h5>
+        <ul><li>AutoCAD+3ds max/revit + Photoshop (basic) without Internship<br> @Rs.6999 /-</li></ul></div>
+        <div><a href="./paymentgateway3.html"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
+        <div><h5 style="font-weight: 500">PACKAGE 4:</h5>
+        <ul><li>AutoCAD<br> @Rs.2500 /-</li></ul></div>
         <div><a href="./paymentgateway2.html"><button class="btn btn-primary"style="margin-left:120px">Register</button></a></div><br>
         <h4 style="font-weight: 500">COURSE DURATION</h4>
         <ul><li>2+ Months<br>
@@ -109,9 +125,21 @@
           to based on test results companies will be given , Interview
           will be arranged , candidates need to crack by themselves
           after complete training. </p>
-          <div>
-            <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px" src="assets/img/intern1.png"><br>
-          </div>
+          <h4 style="font-weight: 500">Give aways of training</h4>
+       <ol>
+        <li>Internship will be provided by the company</li>
+        <li>Training certificate</li>
+        <li>Letter of Recommendation</li>
+        <li>Project orientated teaching</li>
+        <li>Pathway to best technical orientation</li>
+        <li>Candidate will not struggle when joined in company</li>
+        <li>Technical Support will be given to candidate at the working place for 1 month</li>
+        <li>Will help in resume marketing and creating structure</li>
+        <li>Stipend (Depend individual company)</li>
+        <li>If candidate is worth freshers will be referred for job</li>
+        <li>Recording videos will be given</li>
+        <li>Career guidance</li>
+       </ol>
           <hr><br>
        <h3 style="font-weight: 500"><i>Incorporation of IoT with INDUCE</i></h3>
        <p>
