--- a/internships.html
+++ b/internships.html
@@ -63,7 +63,7 @@
   </section>
     <main>
       <section id="inn" class="container" style="color: #000;">
-        <h2><b style="font-weight: 700"><u>Internships</u></b></h2>
+        <h2><b style="font-weight: 700"><u>Training and Internships</u></b></h2>
         <h3 style="font-weight: 500"><i><b>AVISHKAR TRAINING PROGRAMME</i></b></h3>
         <h4 style="font-weight: 500">Enhance your Designing Skills with Induce</h4>
         <p>In this present innovative world, we know the importance of designing process. Designing is the key process using which we shape our ideas. CAD(Computer Aided Design) is one of the best software used for the process of designing. Designing is the art through which we represent our ideas. Using Sketchup software tools one can bring perfection in their designs. For designing external buildings one can master Revit concepts. 
