--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
             <ul>
 
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
-              <li><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
+              <li class="drop-down"><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
+                <ul>
+                  <li><a href="internships.html#avishkar">Avishkar training programme</a></li>
+                  <li><a href="internships.html#iot">IOT internship</a></li>
+                </ul>
+              </li>
               <li class="drop-down "><a href="about.html"><i class="fa fa-info-circle fa-lg"></i>&ensp;About</a>
                 <ul>
                   <li><a href="about.html">Induce</a></li>
