--- a/internships.html
+++ b/internships.html
@@ -62,7 +62,7 @@
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
     <main>
-      <section id="inn" class="container" style="color: #000;">
+      <section id="avishkar" class="container" style="color: #000;">
         <h2><b style="font-weight: 700"><u>Training and Internships</u></b></h2>
         <h3 style="font-weight: 500"><i><b>AVISHKAR TRAINING PROGRAMME</i></b></h3>
         <h4 style="font-weight: 500">Enhance your Designing Skills with Induce</h4>
@@ -141,6 +141,8 @@
         <li>Career guidance</li>
        </ol>
           <hr><br>
+          </section>
+          <section id="iot">
        <h3 style="font-weight: 500"><i>Incorporation of IoT with INDUCE</i></h3>
        <p>
         The internet of today is notably different than the internet of past decades. The internet of today is more than email, website pages, and document transfers between PCs. The advancing internet is turning into an Internet of Things (IoT). At this point of time no longer will the only devices accessing the internet be tablets, computers, and smartphones. The sensor-equipped, internet-ready, smart devices, automation devices of tomorrow will incorporate everything from automobiles and biomedical gadgets to domestic devices and natural ecosystems.
@@ -148,8 +150,8 @@
        <p>      
         Keeping in view of future technology readiness in new aspiring engineers, we Team INDUCE incorporating TRANING cum INTERNSHIP program on Internet of Things.
        </p>
-        <!-- <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a>
-        </div> -->
+        <div class="text-center"><a href="./paymentgateway.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a>
+        </div>
         <br></br>
         <h3><b style="font-weight: 400"><i>INDUCE Internship Standards</i></b></h3>
         <p>
