--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down"><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
                 <ul>
-                  <li><a href="internships.html#avishkar">Avishkar training programme</a></li>
+                  <li><a href="internships.html">Avishkar training programme</a></li>
                   <li><a href="internships.html#iot">IOT internship</a></li>
                 </ul>
               </li>
