--- a/internships.html
+++ b/internships.html
@@ -31,7 +31,12 @@
           <nav class="nav-menu d-none d-lg-block">
                <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
-              <li class="active "><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
+              <li class="active "><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
+                <ul>
+                  <li><a href="internships.html">Avishkar training programme</a></li>
+                  <li><a href="internships.html#iot">IOT internship</a></li>
+                </ul>
+              </li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
               <ul>
                 <li><a href="about.html">Induce</a></li>
@@ -142,7 +147,7 @@
        </ol>
           <hr><br>
           </section>
-          <section id="iot">
+          <section id="iot" class="container">
        <h3 style="font-weight: 500"><i>Incorporation of IoT with INDUCE</i></h3>
        <p>
         The internet of today is notably different than the internet of past decades. The internet of today is more than email, website pages, and document transfers between PCs. The advancing internet is turning into an Internet of Things (IoT). At this point of time no longer will the only devices accessing the internet be tablets, computers, and smartphones. The sensor-equipped, internet-ready, smart devices, automation devices of tomorrow will incorporate everything from automobiles and biomedical gadgets to domestic devices and natural ecosystems.
