--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     </video>
    </section>
   -->
+  <a href="internships.html#iot" style="position: absolute;bottom:10px;margin-left: 10px;"><button type="button" class="btn btn-success" style="font-size: small;">Register for IOT Internship</button></a>
   <h3 style="text-align: center;color: black;padding-top: 3%;">
     <b>UPDATES</b>
   </h3>
