--- a/internships.html
+++ b/internships.html
@@ -31,7 +31,7 @@
           <nav class="nav-menu d-none d-lg-block">
                <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
-              <li class="active "><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
+              <li class="active drop-down"><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
                 <ul>
                   <li><a href="internships.html">Avishkar training programme</a></li>
                   <li><a href="internships.html#iot">IOT internship</a></li>
