--- a/index.html
+++ b/index.html
@@ -109,8 +109,12 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <a href="./internships.html#iot"><img src="assets/img/iot.jpeg" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item">
           <a href="./internships.html"><img src="assets/img/car9.png" class="d-block w-100" alt="..."></a>
         </div>
+        
         <div class="carousel-item ">
           <a href="./events.html"><img src="assets/img/webdev.jpeg" class="d-block w-100" alt="..."></a>
         </div>
