--- a/internships.html
+++ b/internships.html
@@ -149,6 +149,7 @@
           </section>
           <section id="iot" class="container">
        <h3 style="font-weight: 500"><i>Incorporation of IoT with INDUCE</i></h3>
+       <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px" src="assets/img/iot.jpeg"><br>
        <p>
         The internet of today is notably different than the internet of past decades. The internet of today is more than email, website pages, and document transfers between PCs. The advancing internet is turning into an Internet of Things (IoT). At this point of time no longer will the only devices accessing the internet be tablets, computers, and smartphones. The sensor-equipped, internet-ready, smart devices, automation devices of tomorrow will incorporate everything from automobiles and biomedical gadgets to domestic devices and natural ecosystems.
        </p>
