--- a/events.html
+++ b/events.html
@@ -63,6 +63,49 @@
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
     <main>
+      <section id="samasya" class="container" style="color: #000;">
+        <h2>SAMASYA->PARISHKAR
+        (Way to IDEATHON)</h2>
+        <h5>Quick view of Event</h5>
+        <li> Stating the idea arose from the problem experienced is the main theme of the title "Samasya-> Parishkar"</li>
+        <li>This is a platform encouraging the minds who are capable of viewing their ideas in innovative way</li>
+        <li>Wanted to take part for giving birth to your incredible ideas?</li>
+        <li>Avail this wonderful opportunity and participate in this event by registering in the following link below</li>
+        <br/>
+        <div style="display: flex;justify-content: left">
+         <a href="http://bit.ly/Samasya-Parishkar"><button class="btn btn-primary">Register</button></a>
+        </div>
+        <br/>
+<h5>Rules and Regulations</h5>
+<ul>
+<li>If already registered, please follow the steps below</li>
+<li> Please download the document attached below and fill the document form</li>
+(Document file)
+ <br/>
+        <div style="display: flex;justify-content: left">
+            <a href="https://docs.google.com/document/d/1YJ4dYP8Sf9xu3-FIQP2wfPmg4v_O4Jqn/edit?usp=sharing&ouid=117137104340399606072&rtpof=true&sd=true" download></a>
+            </div>
+             <a href="https://docs.google.com/document/d/1YJ4dYP8Sf9xu3-FIQP2wfPmg4v_O4Jqn/edit?usp=sharing&ouid=117137104340399606072&rtpof=true&sd=true"><button class="btn btn-primary" download>Download</button></a>
+    
+        <br/>
+
+<li>Students of SNIST has to take out the printed copy of the document form filled above and submit them in the submission boxes placed in college at all academic blocks</li>
+<li>Students of other colleges who are far away can submit their document forms through Email</li>
+
+<li>Please find our mail-id below: "teaminducers@gmail.com"</li>
+     </ul>
+       <br/>
+        <h5>Benefits: </h5>
+        <ul>
+          <li> Top 3 winners will get a free admission into the 'Research & Development programme' of INDUCE</li>
+          <li>Participation certificate will be provided</li>        
+          <h6>Note: 'Research & Development programme' from INDUCE is conducted in association with many other companies</h6>
+        </ul>
+        <br/>
+        <h5>Outline</h5>
+        <li>Registrations are open from 22nd Nov,2021</li>
+        <li>Registrations will be closed on 01 Dec,2021</li>
+        </section><hr>
       <section id="webdev" class="container" style="color: #000;">
         <h2>WEB DEVELOPMENT SESSION</h2>
         <h5>Get Set Go with Web Development by Ankit Kumar Singh</h5>
