--- a/events.html
+++ b/events.html
@@ -83,9 +83,7 @@
 (Document file)
  <br/>
         <div style="display: flex;justify-content: left">
-            <a href="https://docs.google.com/document/d/1YJ4dYP8Sf9xu3-FIQP2wfPmg4v_O4Jqn/edit?usp=sharing&ouid=117137104340399606072&rtpof=true&sd=true" download></a>
-            </div>
-             <a href="https://docs.google.com/document/d/1YJ4dYP8Sf9xu3-FIQP2wfPmg4v_O4Jqn/edit?usp=sharing&ouid=117137104340399606072&rtpof=true&sd=true"><button class="btn btn-primary" download>Download</button></a>
+             <a href="https://docs.google.com/document/d/1YJ4dYP8Sf9xu3-FIQP2wfPmg4v_O4Jqn/edit?usp=sharing&ouid=117137104340399606072&rtpof=true&sd=true"><button class="btn btn-primary" download>Download</button></a></div>
     
         <br/>
 
