--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
               <li class="drop-down "><a href="events.html"><i class="fa fa-calendar "
                     aria-hidden="true"></i>&ensp;Events</a>
                 <ul>
+                  <li><a href="events.html#webdev">SAMASYA->PARISHKAR</a></li>
                   <li><a href="events.html#webdev">Web development session</a></li>
                   <li><a href="events.html">Innovate India</a></li>
                   <li><a href="events.html#Milestone">Milestone</a></li>
