--- a/events.html
+++ b/events.html
@@ -83,7 +83,7 @@
 (Document file)
  <br/>
         <div style="display: flex;justify-content: left">
-             <a href="assets/SAMASYAPARISHKAR FORMAT.docx"><button class="btn btn-primary" download>Download</button></a></div>
+             <a href="assets/SAMASYAPARISHKAR FORMAT-converted.pdf"><button class="btn btn-primary" download>Download</button></a></div>
     
         <br/>
 
