--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </div>
     </div>
   </footer>
-  <a href="internships.html#iot" style="z-index: 1000;"><button type="button" class="btn btn-success registeriot" style="font-size: small;position: absolute;bottom:10px;margin-left: 10px;z-index: 1000;">Register for SAMASYA->PARISHKAR</button></a>
+  <a href="events.html" style="z-index: 1000;"><button type="button" class="btn btn-success registeriot" style="font-size: small;position: absolute;bottom:10px;margin-left: 10px;z-index: 1000;">Register for SAMASYA->PARISHKAR</button></a>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
