--- a/events.html
+++ b/events.html
@@ -70,7 +70,8 @@
         <li> Stating the idea arose from the problem experienced is the main theme of the title "Samasya-> Parishkar"</li>
         <li>This is a platform encouraging the minds who are capable of viewing their ideas in innovative way</li>
         <li>Wanted to take part for giving birth to your incredible ideas?</li>
-        <li>Avail this wonderful opportunity and participate in this event by registering in the following link below</li>
+        <li>Avail this wonderful opportunity and participate in this event by registering in the following link below. <b>If already registered, please follow the steps below</b></li>
+        
         <br/>
         <div style="display: flex;justify-content: left">
          <a href="http://bit.ly/Samasya-Parishkar"><button class="btn btn-primary">Register</button></a>
@@ -78,12 +79,12 @@
         <br/>
 <h5>Rules and Regulations</h5>
 <ul>
-<li>If already registered, please follow the steps below</li>
+
 <li> Please download the document attached below and fill the document form</li>
 (Document file)
  <br/>
         <div style="display: flex;justify-content: left">
-             <a href="assets/SAMASYAPARISHKAR FORMAT-converted.pdf"><button class="btn btn-primary" download>Download</button></a></div>
+             <a href="assets/SAMASYAPARISHKAR FORMAT.docx"><button class="btn btn-primary" download>Download</button></a></div>
     
         <br/>
 
@@ -101,8 +102,8 @@
         </ul>
         <br/>
         <h5>Outline</h5>
-        <li>Registrations are open from 22nd Nov,2021</li>
-        <li>Registrations will be closed on 01 Dec,2021</li>
+        <li>Registrations are open from 24th Nov,2021</li>
+        <li>Registrations will be closed on 04th Dec,2021</li>
         </section><hr>
       <section id="webdev" class="container" style="color: #000;">
         <h2>WEB DEVELOPMENT SESSION</h2>
