--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <a href="./events.html"><img src="assets/img/carsv.jpeg" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item ">
           <a href="./internships.html#iot"><img src="assets/img/iot.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item">
