--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down"><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
                 <ul>
-                  <li><a href="internships.html">Avishkar training programme</a></li>
+                  <li><a href="internships.html">CAMPUS AMBASSADOR</a></li>
                   <li><a href="internships.html#iot">IOT internship</a></li>
                 </ul>
               </li>
@@ -110,26 +110,19 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <a href="./internships.html#iot"><img src="assets/img/IOTupdated - Copy.jpeg" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item ">
           <a href="./events.html"><img src="assets/img/carsv.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item ">
-          <a href="./internships.html#iot"><img src="assets/img/iot.jpeg" class="d-block w-100" alt="..."></a>
+          <a href="./events.html#webdev"><img src="assets/img/webdev.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item">
-          <a href="./internships.html"><img src="assets/img/car9.png" class="d-block w-100" alt="..."></a>
-        </div>
-        
-        <div class="carousel-item ">
-          <a href="./events.html"><img src="assets/img/webdev.jpeg" class="d-block w-100" alt="..."></a>
-        </div>
-        <div class="carousel-item">
-          <a href="./internships.html"><img src="assets/img/car1.jpeg" class="d-block w-100" alt="..."></a>
+          <a href="./events.html"><img src="assets/img/car1.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item ">
-          <a href="./internships.html"><img src="assets/img/car2.jpeg" class="d-block w-100" alt="..."></a>
-        </div>
-        <div class="carousel-item">
-          <a href="./internships.html"><img src="assets/img/iot.jpeg" class="d-block w-100" alt="..."></a>
+          <a href="./events.html"><img src="assets/img/car2.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item">
           <a href="https://roboticelectronics.in/tech-blog/robot-operating-system-ros-workshop/"> <img
@@ -334,7 +327,7 @@
       </div>
     </div>
   </footer>
-  <a href="events.html" style="z-index: 1000;"><button type="button" class="btn btn-success registeriot" style="font-size: small;position: absolute;bottom:10px;margin-left: 10px;z-index: 1000;">Register for SAMASYA->PARISHKAR</button></a>
+  <a href="events.html" style="z-index: 1000;"><button type="button" class="btn btn-success registeriot" style="font-size: small;position: absolute;bottom:10px;margin-left: 10px;z-index: 1000;">Register for IOT internship</button></a>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
