--- a/events.html
+++ b/events.html
@@ -31,7 +31,12 @@
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
-              <li><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a></li>
+              <li class="drop-down"><a href="internships.html"><span class="fa fa-puzzle-piece fa-lg"></span>&ensp;internships</a>
+                <ul>
+                  <li><a href="internships.html">CAMPUS AMBASSADOR</a></li>
+                  <li><a href="internships.html#iot">IOT internship</a></li>
+                </ul>
+              </li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
               <ul>
                 <li><a href="about.html">Induce</a></li>
