--- a/IOTAmbassador.html
+++ b/IOTAmbassador.html
@@ -70,7 +70,7 @@
         </div>
       </header>
      
-      <div class="container" id="ff-compose"></div>
+      <div class="container" id="ff-compose" style="color: black;"></div>
 
       
         <footer id="footer">
