--- a/internships.html
+++ b/internships.html
@@ -76,6 +76,7 @@
           Apart, most of the aspirant are students from various colleges like us.<br>
           Keeping this in view, the challenging motto explodes in mind is enhancing the aspirants from many colleges with our amazing skills.
         </p>
+        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px" src="assets/img/ammb-post.jpeg"><br>
         <!-- <h4 style="font-weight: 500">INDUCE Training Standards</h4> -->
         <p>INDUCE is looking forward for such energetic Campus Ambassadors who are capable to promote this strong motto ahead.</p>
         
@@ -102,6 +103,7 @@
             <li>Opportunity to explore ones skills in various aspects of the Startup Environment.</li>
             <li>Best performer will be awarded with certificate.</li>
           </ol> 
+          <p>" For Internship details, see below" </p>
           <p style="color: red;">Note: The BEST PERFORMERS will be announced after 10th April, 2022.</p>
           <div class="text-center"><a href="IOTAmbassador.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a></div><br>
         </section>
