--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
           <a href="./internships.html#iot"><img src="assets/img/IOTupdated - Copy.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item ">
+          <a href="./internships.html"><img src="assets/img/ammb.jpeg" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item ">
           <a href="./events.html"><img src="assets/img/carsv.jpeg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item ">
