--- a/internships.html
+++ b/internships.html
@@ -105,7 +105,7 @@
           </ol> 
           <p>" For Internship details, see below" </p>
           <p style="color: red;">Note: The BEST PERFORMERS will be announced after 10th April, 2022.</p>
-          <div class="text-center"><a href="IOTAmbassador.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a></div><br>
+          <div class="text-center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCqo0tEXpVX1SZ9SfmvspX5zQpEFKKdA90QNCKGJWXW3vSMg/viewform?usp=sf_link"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a></div><br>
         </section>
           <hr>
           <section id="iot" class="container"style="color: #000;"><br>
@@ -135,7 +135,7 @@
             <li>Internship Start date:10th April, 2022.</li>
             <li>Internship Fee: INR 1899/-</li>
             <br><br>
-            <div class="text-center"><a href="IOT.html"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a></div>
+            <div class="text-center"><a href="https://bit.ly/3Ipo4FB"><button type="button" class="btn btn-success " style="width: 300px">Register</button></a></div>
        <br><br>
       </section>
       
