--- a/events.html
+++ b/events.html
@@ -63,11 +63,23 @@
       </div>
     </div>
   </header>
-  
   <section class="jumbotron " id="imgtop" style="background-position: center;background-image: url(assets/img/events4.png); "   >
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
     <main>
+      <section id="sharktank" class="container" style="color: #000;">
+        <h2>SHARK TANK SNIST</h2>
+        <img class="rounded img-fluid  mx-auto d-block img-thumbnail" style="width: 510px;" src="assets/img/sharktank.jpeg"><br>
+        <p>Have you ever wondered how successful entrepreneurs got their start?
+        Come start your exceptional journey with INDUCE Together to Explore at Rigolade'22 in SNIST with Techvision Club.
+        But, first and foremost, aspiring entrepreneurs should register with us at SHARK TANK SNIST.
+        We've got plenty more surprises in store for you.</p>
+        <div style="display: flex;justify-content: center">
+          <a href="https://forms.gle/jRiwGfiWQFuS27fs6"><button class="btn btn-primary">Register</button></a>
+        </div>
+        <br><br>
+      </section>
+      <hr>
       <section id="samasya" class="container" style="color: #000;">
         <h2>SAMASYA->PARISHKAR
         (Way to IDEATHON)</h2>
