--- a/explore.html
+++ b/explore.html
@@ -59,6 +59,7 @@
               </ul>
               <li class="drop-down"><a href="events.html"><i class="fa fa-calendar "aria-hidden="true"></i>&ensp;Events</a>
               <ul>
+                <li><a href="events.html#sharktank">Shark Tank SNIST</a></li>
                 <li><a href="events.html#webdev">Web development session</a></li>
                 <li><a href="events.html">Innovate India</a></li>
                 <li><a href="events.html#Milestone">Milestone</a></li>
